--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "portinhome",
   "version": "1.0.0",
   "description": "",
-
-
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/app.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
