--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "portinhome",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/index.js",
+     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
